iac-modules/extensions/open-webui/v0.11-v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    app: open-webui
spec:
  selector:
    app: open-webui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
